# Twingate-CLI

./: .gitignore  README.md  pyproject.toml  tgcli.py
tg_cli/libs/: StdAPIUtils.py
tg_cli/logics/: AuthLogics.py  ConnectorsLogics.py  DevicesLogics.py  GroupsLogics.py  MappingsLogics.py  RemoteNetworksLogics.py  ResourcesLogics.py  SAccountKeysLogics.py  SecPoliciesLogics.py  ServiceAccountsLogics.py  UsersLogics.py
tg_cli/responses/: AuthResponses.py
tg_cli/transformers/: ConnectorsTransformers.py  DevicesTransformers.py  GroupsTransformers.py  RemoteNetworksTransformers.py  ResourcesTransformers.py  SAccountKeysTransformers.py  SecurityPoliciesTransformers.py  ServiceAccountsTransformers.py  UsersTransformers.py
