[tool.poetry]
name = "twingate-cli"
version = "0.1.0"
description = ""
authors = ["Bren Sapience <brendan@twingate.com>"]
readme = "README.md"
packages = [{include = "tg_cli", from = "."}]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.1.3"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
